# SentinatlCraw

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SentinelClaw PoC Lastenheft v01.docx  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-04-06T10-52-39-550Z.yml  page-2026-04-06T10-53-12-223Z.yml  page-2026-04-06T10-53-26-259Z.yml  page-2026-04-06T10-53-41-041Z.yml  page-2026-04-06T10-54-06-196Z.yml  page-2026-04-06T10-54-28-040Z.yml  page-2026-04-06T10-54-38-552Z.yml
configs/prometheus/: prometheus.yml
deploy/: Dockerfile.api  Dockerfile.frontend  docker-compose.prod.yml
docker/api/: Dockerfile  entrypoint.sh
docker/mcp-server/: .dockerignore  Dockerfile
docker/sandbox/: .dockerignore  Dockerfile
docs/: ABLAUF.md  AGENT_CHAT_DESIGN.md  AGENT_SAFETY.md  CODING_STANDARDS.md  COMPLIANCE_MATRIX.md  DOCKER_RULES.md  DOCUMENTATION_RULES.md  FRONTEND_RULES.md  KILL_SWITCH.md  OPERATIONS.md  PENTEST_FRAMEWORK.md  RBAC_MODEL.md  SECURITY_POLICY.md  UI_DESIGN_PLAN.md
docs/api/: mcp-tools.md
docs/architecture/: ADR-001-nemoclaw-als-agent-runtime.md  ADR-002-datenbank-persistierung.md  ADR-003-llm-provider-strategie.md
docs/runbooks/: first-scan.md  setup.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts  useChatMessages.ts  useWebSocket.ts
frontend/src/pages/: AuditPage.tsx  ComparePage.tsx  DashboardPage.tsx  ExportPage.tsx  FindingDetailPage.tsx  FindingsPage.tsx  LiveScanPage.tsx  LoginPage.tsx  MonitoringPage.tsx  NewScanPage.tsx  ProfilesPage.tsx  ReportsPage.tsx  ScanDetailPage.tsx  ScansPage.tsx  SettingsPage.tsx  WhitelistPage.tsx  WorkspacePage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: format.ts
scripts/: run_scan.py  verify_m1.py  verify_m2.py  verify_m4.py  verify_m5_acceptance.py
src/: cli.py
src/agents/: README.md  chat_agent.py  chat_system_prompt.py  llm_provider.py  nemoclaw_commands.py  nemoclaw_runtime.py  openshell_executor.py  report_persistence.py  sandbox_log_stream.py  sandbox_policy.py  scan_executor.py  token_tracker.py  tool_bridge.py
src/agents/recon/: agent.py  parser.py  prompts.py  result_types.py
src/api/: README.md  agent_memory_routes.py  agent_tool_routes.py  auth_routes.py  backup_routes.py  chat_routes.py  cookie_auth.py  finding_routes.py  gdpr_routes.py  kill_verification_routes.py  metrics_routes.py  mfa_routes.py  nemoclaw_setup_routes.py  org_routes.py  rate_limiter.py  scan_routes.py  server.py  settings_routes.py  startup.py  system_routes.py  whitelist_routes.py
src/cli/: README.md  admin_commands.py  output.py
src/mcp_server/: README.md  __main__.py  audit.py  server.py
src/mcp_server/tools/: exec_command.py  input_validation.py  parse_output.py  port_scan.py  vuln_scan.py
src/orchestrator/: README.md  agent.py  assessment.py  multi_phase.py  prompts.py  result_types.py
src/sandbox/: README.md  executor.py
src/shared/: README.md  approval_service.py  auth.py  backup_service.py  config.py  database.py  exporters.py  finding_extractor.py  finding_repository.py  formatters.py  gdpr_service.py  infrastructure.py  kill_switch.py  logging_setup.py  migrations.py  network_kill.py  org_context.py  password_policy.py  progress.py  report_generator.py  repositories.py  retention_service.py  sanitizer.py  scan_compare.py  scan_profiles.py  scope_validator.py  security_layer_check.py  settings_repository.py  settings_service.py  token_blacklist.py
src/watchdog/: README.md  service.py
tests/e2e/: test_full_scan.py  test_kill_switch.py  test_scope_enforcement.py
tests/unit/: test_api.py  test_api_security.py  test_config.py  test_database.py  test_input_validation.py  test_kill_switch.py  test_sanitizer.py  test_scope_validator.py  test_token_blacklist.py  test_token_tracker.py
workspace/: MEMORY.md
(+30 files in other folders)
