[project]
name = "sentinelclaw"
version = "0.1.0"
description = "AI-gestützte Security Assessment Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Jaciel Antonio Acea Ruiz"},
]

dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.0.0,<26.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "docker>=7.0.0,<8.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "pyjwt[crypto]>=2.0.0,<3.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "fpdf2>=2.8.0,<3.0.0",
    "openai>=1.40.0,<2.0.0",
    "pyotp>=2.9.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.8.0,<1.0.0",
    "black>=24.0.0,<26.0.0",
    "bandit>=1.8.0,<2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S101",   # assert erlaubt (Tests + Runtime-Checks)
    "S104",   # Binding 0.0.0.0 ist gewollt (Docker-Container)
    "S105",   # Hardcoded password false-positive (Dev-Default mit Warnung)
    "S106",   # Hardcoded password in ensure_default_admin (mit must_change_password)
    "S108",   # /tmp Nutzung in Tests ist OK
    "S110",   # try-except-pass bei optionalen Operationen (WS-Push, Cleanup)
    "S314",   # XML-Parsing von nmap-Output (vertrauenswürdige Quelle: eigene Sandbox)
    "S603",   # subprocess Aufrufe sind gewollt (Docker, nmap)
    "S607",   # Partial executable path (nmap, nuclei in Container)
    "S608",   # SQL-Injection false-positive (parametrisierte Queries mit Variablen-Tabellennamen)
    "E501",   # Line-too-long — wird schrittweise behoben
    "E402",   # Module-level import not at top — FastAPI-Pattern erfordert dies
    "B904",   # raise-from — HTTPException in FastAPI-Endpoints
    "A002",   # Builtin shadowing — FastAPI Query-Parameter (type, format)
    "SIM102", # Nested if — Lesbarkeit bevorzugt
    "SIM105", # contextlib.suppress — explizites try/except bevorzugt
    "SIM108", # Ternary — Lesbarkeit bevorzugt
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "E501"]  # Tests: Security-Regeln und Line-Length ignorieren

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
